test/functional/failtests/funcAssign.txt
TypeError: Cannot assign values to function declarations
1 | func foo() {}
2 | foo = func() {};
  | ^ (2:1)
3 | export foo;

